# tubereng

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/tubereng-assets/: Cargo.toml
crates/tubereng-assets/src/: lib.rs
crates/tubereng-core/: Cargo.toml
crates/tubereng-core/src/: lib.rs
crates/tubereng-ecs/: Cargo.toml
crates/tubereng-ecs/src/: commands.rs  entity.rs  event.rs  lib.rs  query.rs  relationship.rs  resource.rs  system.rs
crates/tubereng-engine/: Cargo.toml
crates/tubereng-engine/src/: lib.rs
crates/tubereng-gltf/: Cargo.toml
crates/tubereng-gltf/src/: lib.rs  parsing.rs
crates/tubereng-gltf/src/test_data/: 1.gltf  model.glb
crates/tubereng-graphics/: Cargo.toml
crates/tubereng-graphics-wgpu/: Cargo.toml
crates/tubereng-graphics-wgpu/src/: lib.rs  shader.wgsl
crates/tubereng-graphics/src/: camera.rs  color.rs  geometry.rs  gradient_sky.wgsl  lib.rs  light.rs  material.rs  pipeline.rs  render_graph.rs  shader.rs  shader.wgsl  texture.rs  wgsl.rs
crates/tubereng-graphics/src/pipeline/: debug_grid.wgsl  default_pipeline.rs  mod.rs  shader.wgsl
crates/tubereng-input/: Cargo.toml
crates/tubereng-input/src/: lib.rs
crates/tubereng-math/: Cargo.toml
crates/tubereng-math/src/: lib.rs  matrix.rs  number_traits.rs  quaternion.rs  vector.rs
crates/tubereng-obj/: Cargo.toml
crates/tubereng-obj/src/: lib.rs
crates/tubereng-scene/: Cargo.toml
crates/tubereng-scene/src/: lib.rs
crates/tubereng-winit/: Cargo.toml
crates/tubereng-winit/src/: lib.rs
crates/tubereng_asset/: Cargo.toml
crates/tubereng_asset/src/: lib.rs
crates/tubereng_asset/src/vfs/: filesystem.rs  mod.rs  web.rs
crates/tubereng_core/: Cargo.toml
crates/tubereng_core/src/: lib.rs
crates/tubereng_ecs/: Cargo.toml
crates/tubereng_ecs/src/: bitset.rs  commands.rs  component_store.rs  lib.rs  query.rs  relationship.rs  system.rs
crates/tubereng_engine/: Cargo.toml
crates/tubereng_engine/src/: lib.rs
crates/tubereng_graphics/: Cargo.toml
crates/tubereng_graphics/src/: lib.rs
crates/tubereng_gui/: Cargo.toml
crates/tubereng_gui/src/: lib.rs
crates/tubereng_image/: Cargo.toml
crates/tubereng_image/src/: lib.rs
crates/tubereng_input/: Cargo.toml
crates/tubereng_input/src/: lib.rs
crates/tubereng_math/: Cargo.toml
crates/tubereng_math/src/: lib.rs  matrix.rs  number_traits.rs  quaternion.rs  vector.rs
crates/tubereng_renderer/: Cargo.toml
crates/tubereng_renderer/res/: default_engine_font.json
crates/tubereng_renderer/src/: camera.rs  draw_triangle_pass.rs  draw_triangle_pass.wgsl  font.rs  graphics_pipeline.rs  lib.rs  material.rs  mesh.rs  pass_2d.rs  pass_2d.wgsl  render_graph.rs  sprite.rs  texture.rs  ui_pass.rs  ui_pass.wgsl
crates/tubereng_winit/: Cargo.toml
crates/tubereng_winit/src/: lib.rs
examples/basic-app/: Cargo.toml  index.html
examples/basic-app/assets/: assets  custom_shader.wgsl  grass_material.ron  lightbulb_material.ron  material.ron  material2.ron  material3.ron  model.glb
examples/basic-app/src/: lib.rs  main.rs
examples/procedural-terrain/: Cargo.toml
examples/procedural-terrain/assets/: white.ron
examples/procedural-terrain/src/: main.rs
src/: lib.rs
