[package]
name = "tubereng"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [ 
  "crates/*", 
  "examples/*",
]

[dependencies]
tubereng_winit = { path = "crates/tubereng_winit" }
tubereng_ecs = { path = "crates/tubereng_ecs" }
tubereng_engine = { path = "crates/tubereng_engine" }
