[package]
name = "tubereng"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [ 
  "crates/*", 
  "examples/*",
]

[dependencies]
tubereng_core = { path = "crates/tubereng_core" }
tubereng_winit = { path = "crates/tubereng_winit" }
tubereng_ecs = { path = "crates/tubereng_ecs" }
tubereng_math = { path = "crates/tubereng_math" }
tubereng_input = { path = "crates/tubereng_input" }
tubereng_graphics = { path = "crates/tubereng_graphics" }
tubereng_engine = { path = "crates/tubereng_engine" }
