[package]
name = "tubereng"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
resolver = "2"
members = [ 
  "crates/*", 
  "examples/*",
]

[dependencies]
tubereng_core = { path = "crates/tubereng_core" }
tubereng_winit = { path = "crates/tubereng_winit" }
tubereng_ecs = { path = "crates/tubereng_ecs" }
tubereng_math = { path = "crates/tubereng_math" }
tubereng_input = { path = "crates/tubereng_input" }
tubereng_renderer = { path = "crates/tubereng_renderer" }
tubereng_gui = { path = "crates/tubereng_gui" }
tubereng_asset = { path = "crates/tubereng_asset" }
tubereng_engine = { path = "crates/tubereng_engine" }
