[package]
name = "tubereng-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tubereng-assets = { path = "../tubereng-assets" }
tubereng-ecs = { path = "../tubereng-ecs" }
tubereng-graphics = { path = "../tubereng-graphics" }
log = "0.4"