[package]
name = "tubereng-graphics-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tubereng-graphics = { path = "../tubereng-graphics" }
log = "0.4"
wgpu = "0.16"
winit = "0.28"

[target.'cfg(target_arch = "wasm32")'.dependencies] 
wgpu = { version = "0.16", features = ["webgl"] }

