[package]
name = "tubereng-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tubereng-core = { path = "../tubereng-core" }
tubereng-math = { path = "../tubereng-math" }
winit = "0.28"
wgpu = "0.16"
bytemuck = { version = "1.12", features = [ "derive" ] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.16", features = ["webgl"] }