[package]
name = "tubereng-winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tubereng-engine = { path = "../tubereng-engine" }
tubereng-graphics = { path = "../tubereng-graphics" }
tubereng-graphics-wgpu = { path = "../tubereng-graphics-wgpu" }
winit = "0.28"
log = "0.4"
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element"
]}