[package]
name = "tubereng_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tubereng_core = { path = "../tubereng_core" }
tubereng_ecs = { path = "../tubereng_ecs" }
tubereng_input = { path = "../tubereng_input" }
tubereng_asset = { path = "../tubereng_asset" }
tubereng_image = { path = "../tubereng_image" }
tubereng_gui = { path = "../tubereng_gui" }
tubereng_renderer = { path = "../tubereng_renderer" }
raw-window-handle = "0.6"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
include_dir = "0.7"
