[package]
name = "tubereng_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tubereng_ecs = { path = "../tubereng_ecs" }
wgpu = { version = "0.19", features = ["webgl"] }
raw-window-handle = "0.6"
