[package]
name = "tubereng_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tubereng_ecs = { path = "../tubereng_ecs" }
tubereng_math = { path = "../tubereng_math" }
wgpu = { version = "0.19", features = ["webgl"] }
bytemuck = { version = "1.15", features = ["derive"] }
image = { version = "0.25", features = ["png", "rayon"] }
raw-window-handle = "0.6"
