[package]
name = "tubereng_winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", default-features = false, features = ["x11"] }
tubereng_engine = { path = "../tubereng_engine" }
tubereng_input = { path = "../tubereng_input" }
