[package]
name = "tubereng_winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tubereng_engine = { path = "../tubereng_engine" }
tubereng_input = { path = "../tubereng_input" }
winit = { version = "0.29", default-features = false, features = ["x11", "rwh_06"] }
raw-window-handle = "0.6"

