[package]
name = "basic-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "basic-app"
path = "src/main.rs"

[dependencies]
tubereng = { path = "../.." }
log = "0.4"
env_logger = "0.11"
cfg-if = "1"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
pollster = "0.3"

